# wids-datathon-2025

./: .gitignore  Makefile  README.md  pyproject.toml
src/data/: load_data.py
src/features/: preprocessor.py
src/models/: predict.py  train.py  utils.py  xgboost_model.py
